[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nxviz"]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
fail-under = 100
exclude = ["setup.py", "docs", "build", "examples", "notebooks", ".agents"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 2
quiet = false
whitelist-regex = []
color = true

[tool.pytest.ini_options]
addopts = "-v --cov --cov-report term-missing"
testpaths = [
    "tests",
]

[tool.pydoclint]
style = "sphinx"
exclude = "\\.git|\\.tox|tests/data"
require-return-section-when-returning-nothing = false
arg-type-hints-in-docstring = false
check-return-types = false

[tool.coverage.run]
omit = [
    "tests/*",
]

[project]
name = "nxviz"
version = "0.8.0"
description = "Graph Visualization Package"
authors = [{ name = "Eric J. Ma", email = "ericmajinglong@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.3.3",
    "more-itertools>=8.6.0",
    "networkx>=2.5",
    "numpy>=1.19.4",
    "palettable>=3.3.0",
    "pandas>=1.2.0",
    "seaborn>=0.11.1",
]
readme = "README.md"
keywords = ["nxviz", "networkx", "visualization", "graph"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
docs = [
    "zensical",
    "marimo",
]
tests = ["hypothesis", "pytest-cov", "pre-commit", "pytest"]
plotly = ["plotly>=5.0"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.dependencies]
python = ">=3.12"

[tool.pixi.pypi-dependencies]
nxviz = { path = ".", editable = true }

[tool.pixi.feature.py312.dependencies]
python = "~=3.12.0"
[tool.pixi.feature.py313.dependencies]
python = "~=3.13.0"

[tool.pixi.feature.tests.dependencies]
pytest = "*"
pytest-cov = "*"
hypothesis = "*"

[tool.pixi.feature.tests.pypi-dependencies]
plotly = ">=5.0"

[tool.pixi.feature.explore.dependencies]

[tool.pixi.feature.explore.pypi-dependencies]
marimo = ">=0.10.0"
plotly = ">=5.0"

[tool.pixi.feature.explore.tasks]
marimo = "marimo"

[tool.pixi.feature.docs.dependencies]
uv = ">=0.11.18,<0.12"

[tool.pixi.feature.docs.pypi-dependencies]
zensical = "*"
marimo = ">=0.10.0"

[tool.pixi.feature.devtools.dependencies]
pre-commit = "*"
hatch = "*"
ruff = "*"

[tool.pixi.feature.tests.tasks]
test = "pytest"

[tool.pixi.feature.devtools.tasks]
lint = "pre-commit run --all-files"
commit = "git commit"

[tool.pixi.feature.docs.tasks]
build-docs = "bash build_docs.sh"
serve-docs = "zensical serve"

[tool.pixi.feature.setup.tasks]
setup = "pre-commit autoupdate && pre-commit install --install-hooks"
update = "pre-commit autoupdate"

[tool.pixi.environments]
default = { features = ["tests", "devtools", "setup"], solve-group = "default" }
dev = { features = ["tests", "devtools", "explore", "setup"], solve-group = "default" }
docs = { features = ["docs"], solve-group = "default" }
tests = { features = ["tests", "setup"], solve-group = "default" }
explore = { features = ["explore"], solve-group = "default" }
py312 = ["py312", "docs", "tests"]
py313 = ["py313", "docs", "tests"]
